--- a/web/app/themes/platformlondon/styles/query-loop.css
+++ b/web/app/themes/platformlondon/styles/query-loop.css
@@ -1,7 +1,7 @@
 /* Query Loop Block */
 
 .wp-block-post-template {
-    @apply !gap-x-0 !gap-y-4;
+    @apply !gap-x-0 !gap-y-12;
 }
 
 .wp-block-post {
